// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card atom component is expected to render the component correctly 1`] = `
<div
  className="sc-bdfBwQ gXFlcI"
/>
`;

exports[`CardBody atom component is expected to render the component correctly 1`] = `
<div
  className="sc-dlfnbm enEHeW"
/>
`;

exports[`CardHeader atom component is expected to render the component correctly 1`] = `
<div
  className="sc-gsTCUz biQnRI"
/>
`;

exports[`CardSmallText atom component is expected to render the component correctly 1`] = `
<p
  className="sc-hKgILt bcOtjz"
/>
`;
